- fixed proportions - collapsed borders - changed label

--- a/SimulationView/resources/CSS/Tabs.css
+++ b/SimulationView/resources/CSS/Tabs.css
@@ -9,6 +9,11 @@
 
 }
 
+.split-pane *.split-pane-divider {
+    -fx-padding: 0 1 0 1;
+    -fx-background-color: transparent;
+}
+
 .tab{
     -fx-background-insets: 0 1 0 1,0,0;
 }
